<resources>
    <string name="app_name">Road Partner</string>

    <string name="userName">Driver Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="cnic">CNIC</string>
    <string name="createNewAccount">I, accept all terms &amp; conditions</string>
    <string name="titele_hint">Transport Bidding System</string>
    <string name="titele_driver">Driver Application</string>
    <string name="invalidInput">Invalid Input</string>
    <string name="noResultPreview">No result preview</string>
    <string name="pickupAddress">Pickup</string>
    <string name="j_type">Journey Type</string>
    <string name="dropAddress">Drop</string>
    <string name="bid">Bid</string>
    <string name="bidDetails">Bid Details</string>
    <string name="pickupdate">Pickup Date :</string>
    <string name="offerPrice">Offer price</string>
    <string name="distance">Distance</string>
    <string name="pleaseYourBidisProcessing">Please wait your bid is</string>
    <string name="Processing">Processing </string>
    <string name="name">Name</string>
    <string name="cashFromCustomer">Cash from customer</string>
    <string name="yourBid">Your bid</string>
    <string name="start">Start</string>
    <string name="orderNo">Order no</string>
    <string name="letsGo">Lets go</string>
    <string name="tryAgain">Try again</string>
    <string name="start_bidding">Start bidding</string>
    <string name="re_fail">Registration fail</string>
    <string name="re_com">Registration complete</string>
    <string name="user_exit">User already exit</string>
    <string name="win_hint">Congratulation, you won the offer, confirm the offer</string>
    <string name="confirmOffer">Confirm offer</string>
    <string name="loss_hint">You loss the offer, the bid was high</string>
    <string name="bidConfirmedSucessful">Bid confirmed successful</string>
    <string name="bidConfirmedError">Some error occurred. please try again </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="next">Next</string>
    <string name="time">Time :</string>
</resources>
