<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/WidgetsPaddingLarge">

    <LinearLayout
        android:id="@+id/userInputLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <EditText
            android:id="@+id/userNameEditText"
            style="@style/RoadEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/WidgetsMarginMediam"
            android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
            android:drawablePadding="@dimen/drawablePaddingLarge"
            android:ems="10"
            android:hint="@string/userName"
            android:inputType="textPersonName"
            android:padding="@dimen/WidgetsPaddingLarge"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/mobileNumberEditText"
            style="@style/RoadEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/WidgetsMarginMediam"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:drawablePadding="@dimen/drawablePaddingLarge"
            android:ems="10"
            android:hint="@string/mobileNumber"
            android:inputType="phone"
            android:padding="@dimen/WidgetsPaddingLarge"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/addressEditText"
            style="@style/RoadEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/WidgetsMarginMediam"
            android:drawableLeft="@drawable/ic_add_location_black_24dp"
            android:drawablePadding="@dimen/drawablePaddingLarge"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:padding="@dimen/WidgetsPaddingLarge"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <AutoCompleteTextView
            android:imeOptions="actionNext"
            android:id="@+id/cityEditText"
            style="@style/RoadEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/WidgetsMarginMediam"
            android:completionThreshold="1"
            android:drawableLeft="@drawable/ic_location_city_black_24dp"
            android:drawablePadding="@dimen/drawablePaddingLarge"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            android:padding="@dimen/WidgetsPaddingLarge"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/cnicEditText"
            style="@style/RoadEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/WidgetsMarginMediam"
            android:drawableLeft="@drawable/ic_security_black_24dp"
            android:drawablePadding="@dimen/drawablePaddingLarge"
            android:ems="10"
            android:hint="@string/cnic"
            android:inputType="number"
            android:padding="@dimen/WidgetsPaddingLarge"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/fowWordButton"
            style="@style/buttonGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/WidgetsMarginMediam"
            android:drawableLeft="@drawable/ic_arrow_forward_white_24dp"
            android:drawablePadding="@dimen/drawablePaddingLarge"
            android:gravity="left|center_vertical"
            android:padding="@dimen/WidgetsPaddingLarge"
            android:text="@string/next"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>
</ScrollView>