<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="@dimen/WidgetsPaddingLarge">

    <LinearLayout
        android:id="@+id/userInputLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible">

        <EditText
            android:id="@+id/userNameEditText"
            style="@style/RoadEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/WidgetsMarginMediam"
            android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
            android:drawablePadding="@dimen/drawablePaddingLarge"
            android:ems="10"
            android:hint="@string/userName"
            android:inputType="textPersonName"
            android:padding="@dimen/WidgetsPaddingLarge"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/mobileNumberEditText"
            style="@style/RoadEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/WidgetsMarginMediam"
            android:drawableLeft="@drawable/ic_phone_black_24dp"
            android:drawablePadding="@dimen/drawablePaddingLarge"
            android:ems="10"
            android:hint="@string/mobileNumber"
            android:inputType="phone"
            android:padding="@dimen/WidgetsPaddingLarge"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/addressEditText"
            style="@style/RoadEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/WidgetsMarginMediam"
            android:drawableLeft="@drawable/ic_add_location_black_24dp"
            android:drawablePadding="@dimen/drawablePaddingLarge"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:padding="@dimen/WidgetsPaddingLarge"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <AutoCompleteTextView
            android:completionThreshold="1"
            android:id="@+id/cityEditText"
            style="@style/RoadEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/WidgetsMarginMediam"
            android:drawableLeft="@drawable/ic_location_city_black_24dp"
            android:drawablePadding="@dimen/drawablePaddingLarge"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            android:padding="@dimen/WidgetsPaddingLarge"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/cnicEditText"
            style="@style/RoadEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/WidgetsMarginMediam"
            android:drawableLeft="@drawable/ic_security_black_24dp"
            android:drawablePadding="@dimen/drawablePaddingLarge"
            android:ems="10"
            android:hint="@string/cnic"
            android:inputType="number"
            android:padding="@dimen/WidgetsPaddingLarge"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/createAcccountButton"
            style="@style/buttonGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/WidgetsMarginMediam"
            android:drawableLeft="@drawable/ic_person_add_white_36dp"
            android:drawablePadding="@dimen/drawablePaddingLarge"
            android:gravity="left|center_vertical"
            android:padding="@dimen/WidgetsPaddingLarge"
            android:text="@string/createNewAccount"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/registrationProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/WidgetsPaddingLarge"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="gone" />

        <Button
            android:id="@+id/letsGoButton"
            style="@style/buttonGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/WidgetsMarginMediam"
            android:drawableLeft="@drawable/ic_lets_go"
            android:drawablePadding="@dimen/drawablePaddingLarge"
            android:gravity="left|center_vertical"
            android:padding="@dimen/WidgetsPaddingLarge"
            android:text="@string/letsGo"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="gone" />
        <Button
            android:id="@+id/retryButton"
            style="@style/buttonGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/WidgetsMarginMediam"
            android:drawableLeft="@drawable/ic_lets_go"
            android:drawablePadding="@dimen/drawablePaddingLarge"
            android:gravity="left|center_vertical"
            android:padding="@dimen/WidgetsPaddingLarge"
            android:text="@string/tryAgain"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:visibility="gone" />
    </LinearLayout>
</RelativeLayout>