<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <pk.roadpartner.view.DigitalClock
        android:id="@+id/timeCounterDigitalClock"
        style="@style/ClockButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="@dimen/WidgetsMarginMediam"
        android:layout_marginTop="@dimen/WidgetsPaddingMediam"
        android:text="00:00:00"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/bidButton"
        style="@style/buttonGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/relativeLayout2"
        android:layout_marginRight="@dimen/WidgetsMarginMediam"
        android:layout_toEndOf="@+id/relativeLayout"
        android:layout_toRightOf="@+id/relativeLayout"
        android:text="@string/bidDetails"
        android:textAllCaps="false" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/timeCounterDigitalClock"
        android:layout_toStartOf="@+id/timeCounterDigitalClock"
        android:paddingBottom="@dimen/WidgetsPaddingSmall"
        android:paddingLeft="@dimen/WidgetsPaddingLarge"
        android:paddingTop="@dimen/WidgetsPaddingMediam">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/linearLayout3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_driver" />

        <LinearLayout

            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/WidgetsMarginMediam"
            android:layout_marginRight="@dimen/WidgetsMarginMediam"
            android:layout_toRightOf="@+id/imageView3"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/WidgetsPaddingSmall"
                android:text="@string/pickupAddress"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/pickUpTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/WidgetsPaddingSmall"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/journey_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:paddingBottom="@dimen/WidgetsPaddingSmall"
        android:paddingLeft="@dimen/WidgetsPaddingLarge"
        android:paddingTop="@dimen/WidgetsPaddingMediam">

        <TextView
            android:id="@+id/j_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/WidgetsPaddingSmall"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:text="@string/j_type"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:src="@drawable/on_way" />

        <ImageView
            android:id="@+id/j_way"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginRight="@dimen/WidgetsMarginMediam"
            android:layout_alignParentRight="true"
            android:src="@drawable/oneway" />

    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/journey_layout"
        android:layout_toLeftOf="@+id/bidButton"
        android:layout_toStartOf="@+id/bidButton"
        android:paddingBottom="@dimen/WidgetsPaddingSmall"
        android:paddingLeft="@dimen/WidgetsPaddingLarge"
        android:paddingTop="@dimen/WidgetsPaddingMediam">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_destination" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/WidgetsMarginMediam"
            android:layout_marginRight="@dimen/WidgetsMarginMediam"
            android:layout_toRightOf="@+id/imageView2"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/WidgetsPaddingSmall"
                android:text="@string/dropAddress"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/dropTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/WidgetsPaddingSmall"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/WidgetsMarginSmall"
        android:layout_marginLeft="@dimen/WidgetsMagginLarge"
        android:text="@string/pickupdate"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/pickUpDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@+id/text"
        android:layout_toRightOf="@+id/text"
        android:paddingLeft="@dimen/WidgetsPaddingLarge"
        android:text="date"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/pickUpDateTextView"
        android:layout_below="@+id/relativeLayout2"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@+id/pickUpDateTextView"
        android:layout_toRightOf="@+id/pickUpDateTextView"
        android:paddingLeft="@dimen/WidgetsPaddingLarge"
        android:text="@string/time"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/pickUpTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout2"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@+id/timeText"
        android:layout_toRightOf="@+id/timeText"
        android:paddingLeft="@dimen/WidgetsPaddingLarge"
        android:text="time"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/colorAccent" />
</RelativeLayout>